[tool.poetry]
name = "poetry"
version = "0.1.0"
description = "Repository to help with installation, configuration and use of Poetry"
authors = ["David Quinlan"]

# Markdown files are supported
readme = 'README.md'

[tool.poetry.dependencies]
python = "3.7.9"
pandas = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
